# quantyFin-ai-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONSTITUTION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.pgvector  README.md  docker-compose.yml  grouped.txt  main.py  pyproject.toml  test_vci_columns.py
.cursor/rules/: custom-rules.mdc
.github/workflows/: ci.yml  development.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_workflow.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
_bmad/: config.toml  config.user.toml
_bmad-output/brainstorming/: brainstorming-session-2026-06-03-14-34.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-06-05.md  implementation-readiness-report-2026-06-06.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/automator/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
app/: main.py
app/agents/: agent_state.py  agent_types.py  aggregator_agent.py  analyze_agent.py  base_agent.py  embedding_agent.py  guard_agent.py  langgraph_workflow.py  predict_agent.py  retriever_agent.py  search_agent.py
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  agents.py  crew.py  gateway.py  tasks.py
backend/app/api/v1/: news.py  settings.py  stocks.py
backend/app/core/: config.py  exceptions.py  logging.py  neo4j.py
backend/app/models/: __init__.py  crawler_config.py  entity.py  news.py  stock.py
backend/app/services/: ai_pipeline.py  crawler.py  entity_resolution.py  stock_data.py
backend/app/services/scrapers/: __init__.py  base.py  cafef.py  ndh.py  thanhnien.py  tuoitre.py  vietstock.py  vnbusiness.py  vneconomy.py
backend/tests/: conftest.py  test_main.py  test_security.py
backend/tests/agents/: test_crew.py
backend/tests/api/: test_news.py  test_settings.py  test_stocks.py
backend/tests/services/: test_ai_pipeline.py  test_crawler.py  test_entity_resolution.py  test_scheduler.py  test_stock_data.py
config/: settings.py
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: AI Agents: Roles and Responsibilities.md  AI Architecture.md  Agentic Pattern: Roles and Responsibilities.md  Auth.md  Authentication.md  Code Style and Conventions.md  Database Schemas.md  Initial Idea and Design (IEAD).md  JStockAI Agent: AI-Powered Financial Analysis and Stock Prediction.md  Memory Management.md  Migrations.md  Project Structure.md  QuantyFin AI Agent: AI-Powered Financial Analysis and Stock Prediction.md  Security.md  System Architecture.md  Tech Stack.md  api-contracts-frontend.md  api_error_handling.md  architecture.md  component-inventory.md  data-models-frontend.md  deployment-guide.md  development-guide.md  index.md  kgviewer-crawler-guide.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/api/: financial_endpoints.md
docs/design_ui_ux/: PRD-QuantyFin-standalone.md  QuantyFin_Standalone.html
docs/overview/: idea.md  spec.md
examples/: vnstock_usage_examples.py
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: login.spec.ts
plans/260606-1340-security-foundation-fixes/: phase-01-security-fixes.md
scripts/: init-keycloak-db.sql  init_db.py  init_db.sql  test_pgvector.py
scripts/migrations/: 001_initial_schema.sql  002_financial_data.sql  003_vector_database.sql  004_analytics_tables.sql  005_vietnamese_market_data.sql  README.md  __init__.py  migration_runner.py  requirements.txt
tests/: test_auth_utils.py  test_simple.py
tests/contract/: test_cryptocurrencies_get.py  test_financial_api.py  test_forex_pairs_get.py  test_historical_data_bulk_get.py  test_historical_data_get.py  test_historical_data_intraday_get.py  test_historical_data_realtime_get.py  test_listing_exchange_get.py  test_listing_group_get.py  test_listing_industries_get.py  test_listing_industry_get.py  test_listing_international_get.py  (+4 more)
vibeops/: Backlogs.md  Plans.md
(+241 files in other folders)
