[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantyfin-ai-agent"
version = "0.1.0"
description = "AI-powered financial analysis and stock prediction system"
authors = [
    {name = "QuantyFinAI Team", email = "team@quantyfin.ai"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi[all]>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "langgraph>=0.6.7",
    "langchain>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-anthropic>=0.3.20",
    "langchain-community>=0.3.29",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.30.0",
    "redis>=6.4.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "structlog>=25.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "black>=24.8.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.3",
]

lint = [
    "black>=24.8.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
]

test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "factory-boy>=3.3.3",
]

[project.urls]
Homepage = "https://github.com/your-org/quantyfin-ai-agent"
Repository = "https://github.com/your-org/quantyfin-ai-agent"
Documentation = "https://quantyfin-ai-agent.readthedocs.io"
Issues = "https://github.com/your-org/quantyfin-ai-agent/issues"

[project.scripts]
quantyfin-agent = "app.main:main"

[tool.black]
line-length = 79
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/config",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]