[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "neo4j>=6.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "vnstock>=4.0.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

